# databank_mlops

./: .env_template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: report_metrics.yml
airflow/dags/: monitoreo.py
apuntes/: 00_git_flow.md  01_git.md  02_github.md  03_dvc.md  04_dagshub.md  05_microservicios.md  06_docker.md
config/: config.yaml  logger.yaml
data/: .gitignore  datos.txt.dvc  prueba.csv.dvc  prueba.parquet.dvc
experiments/: 00_introduccion_python.ipynb  01_numpy.ipynb  02_pandas.ipynb  03_polars.ipynb  04_duckdb.ipynb  05_sqlalquemy.ipynb  06_matplotlib_seaborn.ipynb  07_sklearn.ipynb  08_pytorch_tensorflow.ipynb
k8s/: deployment.yaml  service.yaml
models/: .gitignore  logistic_regresion_v1.joblib.dvc
parallel_programming/: multiprocessing_example.py  multithreading_example.py  numba_example.py
src/databank_mlops/app/: router.py
src/databank_mlops/app/db/: db.py
src/databank_mlops/app/endpoints/: predict.py
src/databank_mlops/config/: configuration.py
src/databank_mlops/entity/: config_entity.py
src/databank_mlops/logger/: logger.py
src/databank_mlops/models/: factory.py  registry.py
src/databank_mlops/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/databank_mlops/preprocessors/: field_number.py  field_text_to_number.py
src/databank_mlops/utils/: common.py
(+12 files in other folders)
